Correction FirsT(aFollow(B))